--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         --height: 250px;
         --z-index: 4;
       "
+      onclick="makeMain(this)"
     >
       <div class="window-area">
         <code class="terminal">
