changed default styles

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <td>
               <input
                 id="setting--theme-bg"
-                value="#202020"
+                value="#202020dd"
                 onchange="setCSSSetting('--theme-bg', this.value)"
               />
             </td>
@@ -117,7 +117,7 @@
             <td>
               <input
                 id="setting--theme-bg-alt"
-                value="#202020"
+                value="#202020cc"
                 onchange="setCSSSetting('--theme-bg-alt', this.value)"
               />
             </td>
@@ -128,7 +128,7 @@
             <td>
               <input
                 id="setting--theme-bg-alt2"
-                value="#303030"
+                value="#303030cc"
                 onchange="setCSSSetting('--theme-bg-alt2', this.value)"
               />
             </td>
@@ -150,7 +150,7 @@
             <td>
               <input
                 id="setting--shadow"
-                value="#000000aa"
+                value="#89b4fa"
                 onchange="setCSSSetting('--shadow', this.value)"
               />
             </td>
@@ -161,7 +161,7 @@
             <td>
               <input
                 id="setting--shadow-distance"
-                value="8"
+                value="0"
                 type="number"
                 onchange="setCSSSetting('--shadow-distance', this.value + 'px')"
               />
@@ -171,8 +171,8 @@
             <td><code>--shadow-blur</code></td>
             <td>
               <input
-                id="setting--shadow-blue"
-                value="8"
+                id="setting--shadow-blur"
+                value="256"
                 type="number"
                 onchange="setCSSSetting('--shadow-blur', this.value + 'px')"
               />
