trying to get cat working

--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
           id="terminal_input"
           type="text"
           onchange="runCommand(this.value)"
-          autocomplete="new-password"
-        />
+          autocomplete="off"
+        /><br />
       </code>
     </window>
     <!-- CSS Settings window -->
