--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web OS Demo</title>
-    <link rel="stylesheet" href="assets/style.css" />
-    <script src="assets/script.js"></script>
+    <link rel="stylesheet" href="style.css" />
+    <script src="script.js"></script>
   </head>
   <body>
     <!-- Hello World window -->
