--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
     <window
       id="mainWindow"
       name="window_helloWorld"
-      style="--x: 0px; --y: 0px; --width: 440px; --height: 1180px; --z-index: 3"
+      style="
+        --x: 30px;
+        --y: 30px;
+        --width: 440px;
+        --height: 1120px;
+        --z-index: 3;
+      "
       onclick="makeMain(this)"
     >
       <header class="window-header">Hello World!</header>
@@ -52,10 +58,10 @@
     <window
       name="window_terminal"
       style="
-        --x: 970px;
-        --y: 0px;
-        --width: 930px;
-        --height: 1180px;
+        --x: 1000px;
+        --y: 30px;
+        --width: 870px;
+        --height: 1120px;
         --z-index: 4;
       "
       onclick="makeMain(this)"
@@ -72,10 +78,10 @@
     <window
       name="window_CSSSettings"
       style="
-        --x: 470px;
-        --y: 0px;
+        --x: 500px;
+        --y: 30px;
         --width: 470px;
-        --height: 670px;
+        --height: 640px;
         --z-index: 1;
       "
       onclick="makeMain(this)"
@@ -246,10 +252,10 @@
     <window
       name="window_JSSettings"
       style="
-        --x: 470px;
+        --x: 500px;
         --y: 700px;
         --width: 470px;
-        --height: 480px;
+        --height: 450px;
         --z-index: 2;
       "
       onclick="makeMain(this)"
