Changed colours and added blur

--- a/index.html
+++ b/index.html
@@ -244,6 +244,16 @@
               />
             </td>
           </tr>
+          <tr>
+            <td><code>--bg-blur</code></td>
+            <td>
+              <input
+                id="setting--bg-blur"
+                type="number"
+                onchange="setCSSSetting('--bg-blur', this.value + 'px')"
+              />
+            </td>
+          </tr>
         </table>
       </div>
       <footer class="window-footer">Footer</footer>
