source code link

--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
           </li>
         </ul>
       </div>
-      <footer class="window-footer">Footer</footer>
+      <footer class="window-footer">
+        See the <a href="https://github.com/0xF32/web-os">Source Code</a>
+      </footer>
     </window>
     <!-- Terminal window -->
     <window
